--- a/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_core/fact_payments.yml
+++ b/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_core/fact_payments.yml
@@ -1,9 +1,9 @@
 version: 2
 
 models:
-  - name: stg_back_office__payments
+  - name: fact_payments
     description: >
-      Staged model for payments, sourced from the raw payments table. 
+      Fact table for payments. 
       Includes details about payment transactions such as amount, date, and method, 
       and links to invoices and subscriptions.
     columns:
@@ -15,10 +15,15 @@ models:
         description: Identifier of the invoice associated with the payment.
         data_tests:
           - not_null
+          - dbt_constraints.foreign_key:
+              pk_table_name: ref('fact_invoices')
+              pk_column_name: invoice_id
       - name: subscription_id
         description: Identifier of the subscription associated with the payment.
         data_tests:
-          - not_null
+          - dbt_constraints.foreign_key:
+              pk_table_name: ref('dim_customers_subscriptions_monthly')
+              pk_column_name: subscription_id
       - name: payment_amount
         description: Amount of money paid by the customer.
         data_tests:
@@ -29,9 +34,14 @@ models:
         description: Date when the payment was made.
         data_tests:
           - not_null
+      - name: payment_year_month
+        description: Month truncated value of payment_date.
+        data_tests:
+          - not_null
       - name: payment_method
         description: Payment method used by the customer (e.g., credit_card, bank_transfer, SEPA).
         data_tests:
           - not_null
           - accepted_values:
               values: ['credit card', 'bank_transfer', 'SEPA']
+
