--- a/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_staging/stg_back_office__subscriptions.yml
+++ b/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_staging/stg_back_office__subscriptions.yml
@@ -6,15 +6,16 @@ models:
       Staged model for subscriptions, sourced from the raw subscriptions table.
       Includes key attributes such as start/end dates, billing frequency, amount, discount,
       and plan details. End dates are defaulted to a far-future date if not present.
+
     columns:
+      - name: subscription_id
+        description: Unique identifier of the subscription. When the subscription is updated, a new subscription_id is generated.
+        data_tests:
+          - dbt_constraints.primary_key
       - name: customer_id
         description: Unique identifier for the customer customer associated with the subscription.
         data_tests:
           - not_null
-      - name: subscription_id
-        description: Unique identifier of the subscription.
-        data_tests:
-          - dbt_constraints.primary_key
       - name: subs_start_date
         description: The date when the subscription started.
         data_tests:
@@ -45,13 +46,3 @@ models:
               values: ['Core', 'Core Pro']
       - name: subscription_status
         description: Current status of the subscription (e.g., active, waiting(for subscriptions starting in future or renewed ones), deactivated, expired).
-
-    data_tests:
-      - dbt_utils.mutually_exclusive_ranges:
-          description: >
-            Ensures that each subscription_id has non-overlapping active periods.
-            This prevents the same subscription from having multiple active date ranges at the same time,
-            ensuring consistent data.
-          lower_bound_column: subs_start_date
-          upper_bound_column: subs_end_date
-          partition_by: subscription_id
