--- a/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_mart/mart_customer_success_targets.yml
+++ b/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_mart/mart_customer_success_targets.yml
@@ -48,3 +48,9 @@ models:
         description: >
           Boolean flag indicating whether the customer is on a core plan and does not yet
           have the Recruiting add-on. Used to identify cross-sell opportunities.
+
+    data_tests:
+      - dbt_constraints.primary_key:
+          column_names:
+            - customer_id
+            - addon_name
