--- a/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_core/dim_customers_subscriptions_monthly.yml
+++ b/my_dbt_billing_project/my_dbt_billing_project/models/example/lakehouse/lkh_core/dim_customers_subscriptions_monthly.yml
@@ -18,6 +18,9 @@ models:
         description: Unique identifier for the customer.
         data_tests:
           - not_null
+          - dbt_constraints.foreign_key:
+              pk_table_name: ref('dim_customers')
+              pk_column_name: customer_id
       - name: subscription_id
         description: Unique identifier for the subscription.
         data_tests:
